crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_array_basic.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "arr",
                    ),
                    ty: Some(
                        Array(
                            I32,
                            3,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Array(
                            I32,
                            3,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "val",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: ArrayLit {
                                elem_type: I32,
                                elements: [
                                    Int(
                                        10,
                                    ),
                                    Int(
                                        20,
                                    ),
                                    Int(
                                        30,
                                    ),
                                ],
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: ArrayIndex {
                                base: LocalId(
                                    0,
                                ),
                                index: Int(
                                    1,
                                ),
                                bounds_check: true,
                            },
                        },
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Move(
                                LocalId(
                                    3,
                                ),
                            ),
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
