crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_array_len.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 423
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
