crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_call_placeholder.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [
                Local {
                    name: None,
                    ty: None,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Call {
                                name: "call",
                                args: [],
                            },
                        },
                        Nop,
                        Return(
                            None,
                        ),
                    ],
                },
            ],
        },
    ],
}
