crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_compare_eq.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Binary {
                                op: Eq,
                                lhs: Int(
                                    1,
                                ),
                                rhs: Int(
                                    2,
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
