crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_fn_with_params.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 153
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "add",
            ret_type: Some(
                I32,
            ),
            params: [
                LocalId(
                    0,
                ),
                LocalId(
                    1,
                ),
            ],
            locals: [
                Local {
                    name: Some(
                        "a",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                },
                Local {
                    name: Some(
                        "b",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                },
                Local {
                    name: None,
                    ty: None,
                    mutable: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Binary {
                                op: Add,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
