crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_for_continue.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "acc",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: true,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "i",
                    ),
                    ty: None,
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: None,
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: ConstInt(
                                0,
                            ),
                        },
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: ConstInt(
                                0,
                            ),
                        },
                        Goto(
                            BlockId(
                                1,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Binary {
                                op: Lt,
                                lhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                rhs: Int(
                                    8,
                                ),
                            },
                        },
                        If {
                            cond: Local(
                                LocalId(
                                    2,
                                ),
                            ),
                            then_bb: BlockId(
                                2,
                            ),
                            else_bb: BlockId(
                                4,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: Binary {
                                op: Mod,
                                lhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                rhs: Int(
                                    2,
                                ),
                            },
                        },
                        Assign {
                            local: LocalId(
                                4,
                            ),
                            value: Binary {
                                op: Eq,
                                lhs: Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                                rhs: Int(
                                    0,
                                ),
                            },
                        },
                        If {
                            cond: Local(
                                LocalId(
                                    4,
                                ),
                            ),
                            then_bb: BlockId(
                                5,
                            ),
                            else_bb: BlockId(
                                6,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                6,
                            ),
                            value: Binary {
                                op: Add,
                                lhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                rhs: Int(
                                    1,
                                ),
                            },
                        },
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Move(
                                LocalId(
                                    6,
                                ),
                            ),
                        },
                        Goto(
                            BlockId(
                                1,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Goto(
                            BlockId(
                                3,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                5,
                            ),
                            value: Binary {
                                op: Add,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    5,
                                ),
                            ),
                        },
                        Goto(
                            BlockId(
                                3,
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
